# git-jock-cli

./: .gitignore  23-pypi-prereleases-not-working.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  token
.actevents/: push_alpha.json  push_normal.json  witterless.json
.github/deprecated-workflows/: release-test.yml
.github/workflows/: check-for-gh.yml  release-alpha.yml  release-beta.yml  release-test.yml  release.yml  shiftleft.yml  verify.yml
jock/: __init__.py  __main__.py  cli.py  config.py  constant.py  git.py  utils.py
jockcli/: __main__.py  cli.py  git.py  jockcli.py  utils.py
scripts/: install.sh  set_version
tests/: utils.py
tests/unit/: test_cli.py  test_config.py  test_git.py  test_jockcli.py  test_utils.py
