[project]
name = "jock"
version = "1.0.0b3"
description = "Group and manage multiple git repositories"
authors = [
    "Gavin Fenton <contact@gavinfenton.com>"
]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""

[dependencies]
Click = "^7.1.2"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"